styled register component, still need to fix last name input label alignment

--- a/mugsite/src/app/mughub/auth/login/login.component.css
+++ b/mugsite/src/app/mughub/auth/login/login.component.css
@@ -1,7 +1,3 @@
-.logo--width {
-  width: 200px;
-}
-
 .auth-input{
   background-color: #2b5570;
   border-radius: 33.5px;
@@ -33,7 +29,7 @@
   font-size: 16px;
 }
 
-.auth-register-prompt {
+.auth-switch-prompt {
   color: grey;
   font-size: 13px;
   text-decoration: underline;
